Working on responsivity 2/4

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
         <body>
             <div class="nav">
-                <button class="img-button github1"></button>
+                <button class="img-button github1" onclick="location.href = 'https://github.com/Natrexq/MyReadyCssElements'"></button>
                 <button class="img-button logo" onclick="location.reload();"></button>
                 <button class="img-button hamburger" id="hamb">
                     <span class="line"></span>
@@ -63,11 +63,13 @@
                 <img src="resources/css/images/mcssel.png" alt="" class="mrce">
             </div>
             <div class="footer-box">
-                <h2 class="big-footer-text gradient-text"><b>Footer</b></h2>
-                <h2 class="footer-text anim-scale-text">• GitHub</h2>
-                <h2 class="footer-text anim-scale-text">• License</h2>
-                <h2 class="footer-text anim-scale-text">• Copyright</h2>
-                <h2 class="footer-text anim-scale-text">• Authors of images</h2>
+                <div class="site-map">
+                    <h2 class="big-footer-text gradient-text"><b>Footer</b></h2>
+                    <h2 class="footer-text anim-scale-text">• GitHub</h2>
+                    <h2 class="footer-text anim-scale-text">• License</h2>
+                    <h2 class="footer-text anim-scale-text">• Copyright</h2>
+                    <h2 class="footer-text anim-scale-text">• Authors of images</h2>
+                </div>
 
                 
             </div>
